--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+sudo: false
+
 env:
   global:
    # The next declaration is the encrypted COVERITY_SCAN_TOKEN, created
@@ -7,8 +9,8 @@ env:
 language: c
 
 before_install:
-    - sudo apt-get update -qq
-    - sudo apt-get install -qq pkg-config check doxygen
+#    - sudo apt-get update -qq
+#    - sudo apt-get install -qq pkg-config check doxygen
 
 script:
     - ./bootstrap
